...
                floatingActionButton = {
                    Toolbox(
                        onRemove = { showConfirmation.value = true },
                        onEdit = viewModel::editContent,
                    )
                },
                modifier = Modifier.testTag("ShowQrCode.Scaffold")
            ) { innerPaddings ->
                BoxWithConstraints(modifier = Modifier.padding(innerPaddings)) {
                    PageContent(
                        isPortrait = maxWidth < maxHeight,
                        qrCode = state.qrCode,
                        text = content.string(),
...
        FloatingActionButton(
            onClick = onClick,
            shape = CircleShape,
        ) {
            Icon(
                imageVector = Icons.Default.Edit,
                contentDescription = "Edit Content",
            )
        }
    }

    @Composable
    fun RemoveContentButton(onClick: () -> Unit) {
...
            containerColor = MaterialTheme.colorScheme.errorContainer,
            contentColor = Color.White,
            shape = CircleShape,
        ) {
            Icon(
                imageVector = Icons.Default.Delete,
                contentDescription = "Remove Content",
            )
        }
    }

    @Composable
    fun ToolBoxButton(expand: ReactiveAction<Boolean>) {
...
                        imageVector = Icons.Default.ArrowDownward,
                        contentDescription = "Collapse the Toolbox",
                    )
                else
                    Icon(
                        imageVector = Icons.Default.Settings,
                        contentDescription = "Expand the Toolbox",
                    )
            }
        }
    }

    @Composable
    fun RemoveConfirmationBottomSheet(
        showAction: ReactiveAction<Boolean>,
        title: String,
        removeContent: () -> Unit,
    ) {
        Confirmation.Module(
            showAction,
            title = "Remove Content",
            body = "Are you sure you want to remove \"$title\"?",
            actions = arrayOf(
                ActionType(
                    label = "Remove",
                    called = removeContent,
                    colors = Confirmation.ButtonColors(
                        container = MaterialTheme.colorScheme.errorContainer,
                        text = MaterialTheme.colorScheme.onErrorContainer,
                    )
                )
...
            }
            item {
                ErrorCorrectionLabel()
                ErrorCorrection.Module(eccAction = eccAction)
            }
            item {
                Text(
                    text = qrCodeText,
                    modifier = Modifier.testTag("QR-Code.Text")
                )
            }
        }
    }
...
