...
        ) { innerPadding ->
            LazyVerticalGrid(
                columns = GridCells.Adaptive(250.dp),
                contentPadding = PaddingValues(6.dp),
                modifier = Modifier
                    .padding(innerPadding)
                    .testTag("Qr-Code Contents")
            ) {
                items(state.contents) {
                    QrCodeContent(
                        content = it,
                        onClick = { viewModel.showQrCode(it) },
                        modifier = Modifier.padding(8.dp),
...
    @Composable
    fun AddContentButton(onClick: () -> Unit) {
        FloatingActionButton(
            onClick = onClick,
            shape = CircleShape,
        ) {
            Icon(imageVector = Icons.Default.Add, contentDescription = "Add Content")
        }
    }

    @Composable
    fun HandleEffects(
        effect: Flow<HomeEffect>,
...
